# ontolius

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy.yml
benches/: hierarchy_io.rs  hierarchy_traversals.rs  term_ids.rs
resources/: README.md
resources/go/: subset-go.sh
resources/maxo/: subset-maxo.sh
src/: common.rs  error.rs  lib.rs  prelude.rs  py.rs  term.rs  term_id.rs
src/base/: mod.rs  py.rs  term.rs  term_id.rs
src/hierarchy/: edge.rs  index.rs  mod.rs
src/io/: mod.rs  obographs.rs
src/ontology/: api.rs  index.rs  mod.rs  simple.rs
src/ontology/csr/: beta.rs  hierarchy.rs  mod.rs  ontology.rs
tests/: test_common.rs  test_io.rs
