[package]
name = "ontolius"
version = "0.4.1-dev0"
description = "Empower analysis with terms and hierarchy of biomedical ontologies."
keywords = ["ontology", "bioinformatics", "HPO", "MAxO", "GO"]
edition = "2021"

homepage = "https://github.com/ielis/ontolius"
repository = "https://github.com/ielis/ontolius"
readme = "README.md"
license-file = "LICENSE"

authors = ["Daniel Danis <daniel.gordon.danis@protonmail.com>"]

[dependencies]
graph_builder = "0.3.1"
anyhow = "1.0.86"
pyo3 = { version = "0.21.2", optional = true, features = ["abi3-py310"] }
obographs-dev = { version = "0.2.2", optional = true}
curieosa = { version = "0.1.0", optional = true }


[dev-dependencies]
obographs-dev = "0.2.2"
curieosa = "0.1.0"
flate2 = "1.0.30"
criterion = "0.5.1"
rstest = "0.22.0"

[features]
default = ["obographs"]
obographs = ["dep:obographs-dev", "dep:curieosa"]
pyo3 = ["dep:pyo3"]

[[bench]]
name = "hierarchy_io"
harness = false

[[bench]]
name = "hierarchy_traversals"
harness = false

[[bench]]
name = "term_ids"
harness = false
