[package]
name = "ontolius"
version = "0.5.4-dev0"
description = "A fast and safe crate for working with biomedical ontologies."
keywords = ["ontology", "bioinformatics", "HPO", "MAxO", "GO"]
edition = "2021"

homepage = "https://github.com/ielis/ontolius"
repository = "https://github.com/ielis/ontolius"
readme = "README.md"
license-file = "LICENSE"

authors = ["Daniel Danis <daniel.gordon.danis@protonmail.com>"]

[dependencies]
anyhow = "1.0.86"
curieosa = { version = "0.1.0", optional = true }
graph_builder = { version = "0.3.1", optional = true }
obographs-dev = { version = "0.2.2", optional = true }
pyo3 = { version = "0.24.1", optional = true, features = ["abi3-py310"] }
# Ontolius will not compile without pinning `rayon=1.10.0`
# because there is an error upstream in the `graph_builder` crate.
# The dependency restriction can be removed after the error is fixed.
# https://github.com/neo4j-labs/graph/issues/138
rayon = { version = "=1.10.0", optional = true }

[dev-dependencies]
flate2 = "1.0.30"
criterion = "0.5.1"

[features]
default = ["obographs", "csr"]
csr = ["dep:graph_builder", "dep:rayon"]
obographs = ["dep:obographs-dev", "dep:curieosa"]
pyo3 = ["dep:pyo3"]

[[bench]]
name = "hierarchy_io"
harness = false

[[bench]]
name = "hierarchy_traversals"
harness = false

[[bench]]
name = "term_ids"
harness = false
